@startuml
class User {
    -user_id: int
    -username: String
    -password_hash: String
    +getUserId(): int
    +getUsername(): String
    +getPasswordHash(): String
    +setUsername(String)
    +setPasswordHash(String)
}

class Message {
    -message_id: int
    -user_id: int
    -content: String
    -timestamp: Date
    -is_encrypted: boolean
    +getMessageId(): int
    +getUserId(): int
    +getContent(): String
    +getTimestamp(): Date
    +isEncrypted(): boolean
    +setContent(String)
    +setEncrypted(boolean)
}

class Session {
    -session_id: int
    -user_id: int
    -session_token: String
    -created_at: Date
    -expires_at: Date
    +getSessionId(): int
    +getUserId(): int
    +getSessionToken(): String
    +getCreatedAt(): Date
    +getExpiresAt(): Date
    +setSessionToken(String)
    +setExpiresAt(Date)
}

class DatabaseManager {
    -connection: Connection
    +connect(): void
    +createUser(User): void
    +getUserById(int): User
    +createMessage(Message): void
    +getMessagesByUser(int): List<Message>
    +createSession(Session): void
    +getSessionByToken(String): Session
    +close(): void
}

User ||--o{ Message
User ||--o{ Session
DatabaseManager --> User
DatabaseManager --> Message
DatabaseManager --> Session
@enduml
